# 2025.2-g9-sensorumidadewireless

./: .gitignore  docker-compose.yml  platformio.ini
docs/: README.md  api.md  database.md  embarcado.md  frontend.md  mqtt-broker.md
lib/comm/: wifi_interface.h
lib/esp32/: esp32_hardware.h  esp32_json.h  esp32_logger.cpp  esp32_logger.h  esp32_mqtt.cpp  esp32_mqtt.h  esp32_wifi.cpp  esp32_wifi.h
lib/hal/: hardware_interface.h
lib/utils/: logger_interface.h
mqtt-broker/: .gitignore  Dockerfile  README.md  mosquitto.conf  test_broker.sh  test_mqtt.sh
src/: Dockerfile.api  main.cpp
src/client_service/backend/: .env  main.py  pyproject.toml
src/client_service/backend/app/: dependencies.py  main.py
src/client_service/backend/app/config/: timezone_config.py
src/client_service/backend/app/models/: __init__.py  health.py  processes.py
src/client_service/backend/app/routers/: __init__.py  health.py  measurements.py  processes.py  sensors.py
src/client_service/backend/app/services/database/: init_db.py  psg_client.py
src/client_service/backend/app/services/database/base_client/: _dbclient.py
src/client_service/backend/app/services/database/tables/: base.py  measurements.py  processes.py  sensor_registry.py
src/client_service/backend/app/services/mqtt/: consumer.py  interfaces.py  publisher.py
src/client_service/backend/app/utils/: __init__.py  logger.py
src/client_service/backend/tests/: simulate_sensor.py
src/client_service/frontend/: Dockerfile  index.html  nginx.conf  package.json
src/client_service/frontend/src/: App.jsx  main.jsx  styles.css
src/client_service/frontend/src/components/: EstufaCard.jsx  EstufaDetail.jsx  EstufaList.jsx  SensorRow.jsx  TimeSeriesChart.css  TimeSeriesChart.jsx
src/client_service/frontend/src/mock/: api.js
src/client_service/frontend/src/services/: api.js
src/embedded/: esp.ino
src/embedded/impl/esp32/: esp32_hardware.cpp  esp32_hardware.h  esp32_json.cpp  esp32_json.h  esp32_logger.cpp  esp32_logger.h  esp32_mqtt.cpp  esp32_mqtt.h
src/embedded/include/: MainController.cpp  MainController.h
src/embedded/lib/comm/: mqtt_interface.h  mqtt_types.h
src/embedded/lib/controllers/: MainController.cpp  MainController.h
src/embedded/lib/esp32/: esp32_hardware.cpp  esp32_json.cpp  esp32_logger.cpp  esp32_mqtt.cpp  esp32_mqtt.h  esp32_wifi.cpp  esp32_wifi.h
src/embedded/lib/utils/: json_interface.h  string_utils.h
src/embedded/src/: esp.ino  esp32.ino  main.cpp
src/embedded/test/: CMakeLists.txt  mock_implementations.h  test_controller.cpp  test_controller.txt
test/: CMakeLists.txt  test_controller.txt
