[project]
name = "estufa-dashboard-api"
version = "0.1.0"
description = "API para monitoramento de estufas"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.2",
    "sqlalchemy>=2.0.44",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.3",
    "mypy>=1.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 80
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
preview = true
ignore = [
    "D",           # Ignore all docstring rules
    "D100",        # Ignore missing module docstring
    "D101",        # Ignore missing class docstring
    "D102",        # Ignore missing method docstring
    "D103",        # Ignore missing function docstring
    "D104",        # Ignore missing package docstring
    "CPY001",      # Ignore missing copyright notice
    "INP001",      # Ignore missing __init__.py
    "TD002",       # Ignore TODO author requirement
    "TD003",       # Ignore TODO link requirement
    "FA102",
    "BLE001",
    "TRY003",
    "EM101",
    "TRY300",
    "FA100"

]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["ALL"]  # Ignore all rules for __init__ files

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
preview = true

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
ignore_missing_imports = false
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
